--- a/.gitignore
+++ b/.gitignore
@@ -131,5 +131,11 @@ dmypy.json
 # TEMP_DIR
 /csv
 
-#IntelliJ IDEA
+# IntelliJ IDEA
 /.idea
+
+# Jupyter notebooks for test
+*.ipynb
+
+# Database
+*.db
